Replace deprecated constructors with static valueOf